Adjust nav and github alignment issue and fix sizing of NavToggler

--- a/frontend/sass/components/_github.scss
+++ b/frontend/sass/components/_github.scss
@@ -7,7 +7,6 @@
 	position: relative;
 	display: flex;
 	align-items: center;
-	align-self: flex-start;
 	z-index: 10000;
 
 	@include respond(nav-switch) {
